<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/black_bg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@mipmap/logo1" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="35dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Email ID"
            android:textColorHint="@color/white"

            android:textColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Atleast 6 characters)"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:backgroundTint="#C0C0C0"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="20dp"/>
<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="(or)"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login with OTP"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="0dp"
            android:background="?attr/selectableItemBackground"/>
        -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp"
                android:padding="0dp"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"/>

</LinearLayout>