<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/black_bg">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="@drawable/background_outline"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <!--
        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/user_name"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:background="@drawable/button_outline" />
        -->

        <!--
        <EditText
            android:id="@+id/contact"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:background="@drawable/button_outline"
            />
        -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            android:textColorHint="@color/white"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Contact No"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact"
                android:inputType="number"
                android:digits="1234567890()+"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="Confirm Password"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_provider_seeker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Job Provider"
                android:textSize="16dp"
                android:textColor="@color/white"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Job Seeker"
                android:textSize="16dp"
                android:textColor="@color/white"/>

        </RadioGroup>


        <Button
            android:id="@+id/create_account_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/create_account_button"
            android:enabled="false"
            android:textColor="@color/white"
            android:backgroundTint="#C0C0C0"
            android:textSize="20dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a User ?"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/login_hypertext"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/loginhypertext"
                android:textColor="@color/white"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"/>
</LinearLayout>